# customer-service-ticket-triage

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
notebooks/: CustomerTicketTriage.ipynb
src/: dataset.py  models.py
