[project]
name = "customer-service-ticket-triage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.1",
    "hf-xet>=1.1.9",
    "huggingface-hub>=0.34.4",
    "kagglehub[hf-datasets]>=0.3.13",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
    "torch>=2.8.0",
    "trackio>=0.3.2",
    "transformers>=4.55.4",
]
